@@ -1,0 +1,62 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Philio Tech: PAN11-1B Plug-in Switch plus Power Meter -->
+
+    <!-- Configuration  -->
+    <CommandClass id="112">
+        <Value type="short" genre="config" instance="1" index="1" label="Watt Meter Report Period" units="seconds" size="2" min="1" max="32767" value="720">
+            <Help>If the setting is configured for 1 hour(set value=720), the device will report its instant power consumption every 1 hour to Z_Wave controller. Unit: 5 secs, Min: 1, Max: 32767, Default: 720</Help>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="2" label="KWH Meter Report Period" units="minutes" size="2" min="1" max="32767" value="6">
+            <Help>If the setting is configured for 1hour (set value =6), the PAN11 will report its Accumulated Power Consumption (KW/h) every 1 hour to Group1 node. The maximum interval to report its Accumulated Power Consumption (KW/h) is 227.55 days (10min*32767/1440=227.55 days).</Help>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="3" label="Thereshold of current for Load Caution" units="ampere" size="2" min="10" max="1300" value="1300">
+            <Help>This is a warning when the current of load over the preset threshold value, if the setting value is 1300, when the load current of Relay1 over this value, PAN11 will send current meter report to warn the Group1 node, the Range of the setting value is from 10 to 1300,and the default value is 1300.</Help>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="4" label="Thereshold of KWh for Load Caution" units="KWh" size="2" min="1" max="10000" value="10000">
+            <Help>This is a warning when the KWh of load over the preset threshold value, If the setting value is 10000, when the Accumulated Power Consumption of Relay1 over this value, PAN11 will send KWH meter report to warn the Group1 node, minimum value is 1KWh and default value is 10000 kWh.</Help>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="5" label="Restore switch state mode" min="0" max="2" size="1" value="1">
+            <Help>
+                Whenever the AC power return from lost, PAN11 will restore the switch state which could be SWITCH OFF, LAST SWITCH STATE, SWITCH ON. The default setting is LAST SWITCH STATE.
+            </Help>
+            <Item label="Switch Off" value="0"/>
+            <Item label="Last Switch State" value="1"/>
+            <Item label="Switch On" value="2"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="6" label="Mode of Switch Off function" min="0" max="1" size="1" value="1">
+            <Help>
+                When the mode of switch On/Off is set to 0, any command of switch off will be disabled and the On/Off function of include button will be disabled. The default setting is enable mode. When manual On/Off function is disabled, the RF command can only switch On but not Off. This is useful function for keeping the device in switch on state.
+            </Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="7" label="LED indication mode" min="1" max="3" size="1" value="1">
+            <Help>
+                Show Switch State:When switch is on, LED is on. When switch is off, LED is off. The default setting is Show Switch State. Show Night mode:When switch is on, LED is off. When switch is off, LED is on. One Flash mode:When the state of switch changes, LED will be on only one second, then LED keeps off.
+            </Help>
+            <Item label="Switch state" value="1"/>
+            <Item label="Night mode" value="2"/>
+            <Item label="One flash" value="3"/>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="8" label="Auto off timer" units="seconds" size="2" min="0" max="32767" value="0">
+            <Help>Whenever PAN11 switches to on, the auto off timer begin to count down. After the timer decrease to zero, it will switch to off automatically. However if Auto off timer is set as 0, the auto off function will be disabled. The default setting is 0.</Help>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="9" label="RF off command mode" min="0" max="3" size="1" value="0">
+            <Help>
+                Whenever a switch off command (BASIC_SET, BINARY_SWITCH_SET, SWITCH_ALL_OFF) is received, it could be interpreted as 4 variety of commands. Switch Off: It switches to OFF state. The default setting is Switch Off. Ignore: The switch off command will be ignored. Switch Toggle: It switches to the inverse of current state. Switch On: It switches to ON state.
+            </Help>
+            <Item label="Switch off" value="0"/>
+            <Item label="Ignore" value="1"/>
+            <Item label="Switch toggle" value="2"/>
+            <Item label="Switch on" value="3"/>
+        </Value>
+    </CommandClass>
+
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="1">
+            <Group index="1" max_associations="1" label="Group 1"/>
+        </Associations>
+    </CommandClass>
+</Product>
